app-code/speedtest-tracker/speedtest-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-ingress
  namespace: monitoring
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`speedtest.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: monitoring}]
      services: [{name: speedtest-tracker-svc, port: 80}]
